# Thaum

./: Dockerfile  RELEASE_NOTES.md  app.py  pyproject.toml  requirements.txt  sample.thaum.toml
.github/workflows/: release.yml
alerts/plugins/jira/: config.py  payload.py
bots/: base.py
connections/plugins/: atlassian.py
docs/: Atlassian-Jira.md
lookup/plugins/: atlassian.py
quickstart/cloud/azure/github/: README.md  deploy.yml.example
quickstart/kubernetes/: README.md
quickstart/systemd/: thaum.conf.example
quickstart/systemd/quadlet/: README.md  thaum.service.credentials.conf.example
quickstart/systemd/scripts/: setup-systemd-credentials.sh
scripts/python/: thaum_config_check.py
tests/: test_handlers_usage_ack.py  test_jira_status_webhook.py  test_responder_resolution.py  test_server_config_base_url.py
thaum/: handlers.py  types.py
