# SPDX-License-Identifier: MPL-2.0
# Copyright 2026 Clinton Bunch
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thaum"
version = "0.6.1"
description = "Chat-driven on-call and team alerting"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.11"
dependencies = [
    "gemstone_utils @ git+https://github.com/gemstone-software-dev/gemstone_utils.git@v0.4.0rc1",
    'tzdata; platform_system == "Windows"',
    "Flask",
    "gunicorn",
    "pydantic>=2.0",
    "webexpythonsdk",
    "SQLAlchemy",
    "ldap3",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
azure = [
    "gemstone_utils[azure] @ git+https://github.com/gemstone-software-dev/gemstone_utils.git@v0.4.0rc1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["thaum*", "alerts*", "bots*", "connections*", "lookup*"]
