# SPDX-License-Identifier: MPL-2.0
# Copyright 2026 Clinton Bunch
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thaum"
version = "0.7.0a2"
description = "Chat-driven on-call and team alerting"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.11"
dependencies = [
    "gemstone_utils==0.4.0",
    'tzdata; platform_system == "Windows"',
    "Flask",
    "gunicorn",
    "pydantic>=2.0",
    "python-json-logger>=2.0.7",
    "webexpythonsdk",
    "SQLAlchemy",
    "ldap3",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
azure = [
    "gemstone_utils[azure]==0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["thaum*", "alerts*", "bots*", "connections*", "lookup*"]
